--- a/products/default/src/main/module.json5
+++ b/products/default/src/main/module.json5
@@ -13,6 +13,7 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
+    "routerMap": "$profile:router_map",
     "abilities": [
       {
         "name": "DefaultAbility",
